// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.devicetrust.v1;

import "google/protobuf/timestamp.proto";
import "teleport/devicetrust/v1/os_type.proto";
import "teleport/devicetrust/v1/tpm.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/devicetrust/v1;devicetrustv1";

// DeviceCollectedData contains information gathered from the device during
// various ceremonies.
// Gathered information must match, within reason, the original registration
// data and previous instances of collected data.
message DeviceCollectedData {
  // Time of data collection, set by the client.
  // Required.
  google.protobuf.Timestamp collect_time = 1;

  // Time of data collection, as received by the server.
  // System managed.
  google.protobuf.Timestamp record_time = 2;

  // Device operating system.
  // Required.
  OSType os_type = 3;

  // Device serial number used to match the device with the inventory.
  // This field is one of the three following
  // values in this precedence:
  // - reported_asset_tag
  // - system_serial_number
  // - base_board_serial_number
  // Required.
  string serial_number = 4;

  // Non-descriptive model identifier.
  // Example: "MacBookPro9,2".
  string model_identifier = 5;

  // OS version number, without the leading 'v'.
  // Example: "13.2.1".
  string os_version = 6;

  // OS build identifier. Augments the os_version.
  // Example: "22D68".
  string os_build = 7;

  // OS username (distinct from the Teleport user).
  string os_username = 8;

  // Jamf binary version, without the leading 'v'.
  // Example: "9.27" or "10.44.1-t1677509507".
  string jamf_binary_version = 9;

  // Unmodified output of `/usr/bin/profiles status -type enrollment`.
  // Used to verify the presence of an enrollment profile.
  string macos_enrollment_profiles = 10;

  // The asset tag of the device as reported by the BIOS DMI Type 3. Tools
  // used by customers to manage their fleet may set this value.
  string reported_asset_tag = 11;

  // The serial number of the "system" as reported by the BIOS DMI Type 1.
  // This field can be empty if no value has been configured.
  string system_serial_number = 12;

  // The serial number of the "base board" as reported by BIOS DMI Type 2.
  // This field can be empty if no value has been configured.
  string base_board_serial_number = 13;

  // If during the collection of this device data, the device performed a TPM
  // platform attestation (e.g during enrollment or authentication), then this
  // field holds the record of this attestation. This allows the state of the
  // device to be compared to historical state, and allows for the platform
  // attestations to be revalidated at a later date.
  //
  // This field is not explicitly sent up by the client, and any DCD sent by a
  // client including this field should be rejected. The server should inject
  // this field once verifying that the submitted platform attestation during
  // the enrollment or authentication.
  //
  // System managed.
  TPMPlatformAttestation tpm_platform_attestation = 14;
}
